# story-writer

./: .gitignore  Makefile  README.md  pyproject.toml
.kiro/: workflow-rectification
docs/: ARCHITECTURE.md  CONSISTENCY_ENGINE.md  IMAGE_SYNTHESIS.md  IMMERSION.md  LIVE_EXTRACTION.md  STYLES.md  UI_DESIGN.md
docs/diagrams/: architecture.puml  components.puml  consistency.puml  data_flow.puml  data_model.puml  image_synthesis.puml  immersion.puml  styles.puml  ui_layout.puml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: Briefing.tsx  CharacterEditor.tsx  Dashboard.tsx  Editor.tsx
story_writer/: __init__.py  api.py  cli.py  consistency.py  context.py  corpus_indexer.py  extraction.py  image_synth.py  models.py  retriever.py  session.py  styles.py  text_gen.py
styles/image/: synthwave-fantasy.yaml
styles/voice/: jk-rowling.yaml  jrr-tolkien.yaml  tom-clancy.yaml
tests/: __init__.py  test_core.py
