[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "story-writer"
version = "0.1.0"
description = "An AI creative writing studio"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.0",
    "opensearch-py>=2.7.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pyyaml>=6.0.2",
    "rich>=13.9.0",
    "click>=8.1.7",
    "pillow>=11.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[project.scripts]
story-writer = "story_writer.cli:main"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
